Bug 1417300 - adjust sample time before calculating the total decoded duration. r=jya a=gchang

We do not want to perform the adjustment of the timestamp after reading the ogg
chain but before. Otherwise the parent's mDecodedAudioDuration would be adjusted
causing the sample's time to be twice the value it should be.

MozReview-Commit-ID: 50VrOCzrwFg