dom/media/ogg/OggDemuxer.cpp
@@ -1348,13 +1348,17 @@ OggTrackDemuxer::NextSample()
   if (mType == TrackInfo::kAudioTrack) {
     data->mTrackInfo = mParent->mSharedAudioTrackInfo;
   }
+  // We do not want to perform the adjustment of the timestamp after reading
+  // the ogg chain but before. Otherwise the parent's mDecodedAudioDuration
+  // would be adjusted causing the sample's time to be twice the value it
+  // should be.
+  data->mTime += mParent->mDecodedAudioDuration;
   if (eos) {
     // We've encountered an end of bitstream packet; check for a chained
     // bitstream following this one.
     // This will also update mSharedAudioTrackInfo.
     mParent->ReadOggChain(data->GetEndTime());
   }
-  data->mTime += mParent->mDecodedAudioDuration;
   return data;
 }
 
